Revert "Fixed overlapping stars from location/venue on small screens"
This reverts commit c5437c7e175bc52b24fae176d5c173155a380af2.

--- a/ploneconf2015/theme/static/less/components/stars.less
+++ b/ploneconf2015/theme/static/less/components/stars.less
@@ -20,8 +20,3 @@
 [data-stars="5"]:after {
   content: "@{icon-star}@{icon-star}@{icon-star}@{icon-star}@{icon-star}";
 }
-@media(max-width: @screen-phone) {
-  sup {
-    top: 0.5em;  
-  }
-}
